working example with personal join code

--- a/eg5/dev2/docker-compose.yml
+++ b/eg5/dev2/docker-compose.yml
@@ -2,13 +2,13 @@ version: '2.3'
 
 services:
     turtle_sim:
-        image: osrf/ros:galactic-desktop
-        environment: 
+        image: osrf/ros:galactic-desktop-focal
+        environment:
             - DISPLAY
-        volumes: 
+        volumes:
             - /tmp/.X11-unix:/tmp/.X11-unix:rw
             - ./cyclonedds.xml:/cyclonedds.xml
-        command: 
+        command:
             - bash
             - -c
             - |
@@ -27,5 +27,5 @@ services:
             - NET_ADMIN
         devices:
             - /dev/net/tun
-        env_file: 
+        env_file:
             - ./.env  # create .env file in the same folder as Dockerfile and specify HOSTNAME and JOINCODE there
